stable ver milestone (run clean)

--- a/client/resizer_app/package.json
+++ b/client/resizer_app/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "dev_network": "npm run dev -- --host",
     "dev": "vite",
     "build": "vite build && npm install",
     "lint": "eslint .",
