--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
     "clean_output_windows": "rmdir /s /q output && mkdir output",
     "clean_windows": "npm run clean_upload_windows && npm run clean_output_windows",
     
+    "prebuild":"mkdir uploads && mkdir output",
+
     "clean":"npm run clean_upload && npm run clean_output && npm run clean_windows",
     
     "dev": "nodemon server"
